<resources>
    <string name="app_name">Constitution of India</string>
    <string name="articles">Articles</string>
    <string name="settings">Settings</string>
    <string name="faqs">FAQs</string>
    <string name="about">About</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="menu_close">Menu Closed</string>
    <string name="preamble">Preamble</string>
    <string name="parts">Parts</string>
    <string name="schedules">Schedules</string>
    <string name="amendments">Amendments</string>
    <string name="theme">THEME</string>
    <string name="light">Light</string>
    <string name="statement_of_object_and_reason"><u>Statement of Object and Reason</u></string>
    <string name="loading">Loading.....</string>
    <string name="article">Article</string>
    <string name="part">Part</string>
    <string name="part_name">Part Name</string>
    <string name="chapter">Chapter</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="schedule">Schedule</string>
    <string name="articles_related">Articles Related</string>
    <string name="amendment_act">Amendment Act</string>
    <string name="parts_affected">Parts Affected</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text_size">Text Size</string>
    <string name="apply">Apply</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="disclaimer">Disclaimer:\n Our app is an independent platform and is <u>NOT affiliated</u> with any government entity.</string>
    <string name="sub_section">Sub Section</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="delete_all">Delete All</string>
    <string name="click_to_expand_contract_elements">Click to expand/contract elements.</string>
    <string name="click_to_bookmark">Click to Bookmark</string>
</resources>