<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/activity_main_menu_group1">
        <item
            android:id="@+id/main_menu_Settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/main_menu_FAQs"
            android:title="@string/faqs"/>
        <item
            android:id="@+id/main_menu_About"
            android:title="@string/about"/>

    </group>

    <group
        android:id="@+id/activity_main_menu_group2">

        <item
            android:id="@+id/main_menu_Share"
            android:title="@string/share"/>

        <item
            android:id="@+id/main_menu_rate"
            android:title="@string/rate_us"/>
<!--        <item-->
<!--            android:id="@+id/main_menu_moreapps"-->
<!--            android:title="@string/more_apps"/>-->

    </group>
</menu>