<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_bookmarks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context="com.example.constitutionofindia.bookmarks.Activity_Bookmarks">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_bookmarks_tb"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/bookmarks"
        app:titleTextColor="?attr/colorOnPrimary">


    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/activity_bookmarks_filter_menu_tflayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_bookmarks_tb"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_bookmarks_filter_all"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1.2"
                android:text="@string/all"
                android:textSize="11sp"/>

            <Button
                android:id="@+id/activity_bookmarks_filter_articles"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="2"
                android:text="@string/articles"
                android:textSize="11sp" />

            <Button
                android:id="@+id/activity_bookmarks_filter_schedules"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="2.2"
                android:text="@string/schedules"
                android:textSize="11sp" />

            <Button
                android:id="@+id/activity_bookmarks_filter_amendments"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="2.5"
                android:text="@string/amendments"
                android:textSize="11sp" />

        </LinearLayout>

    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_bookmarks_rvBookmarkslist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_bookmarks_cvAdCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_bookmarks_filter_menu_tflayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_bookmarks_cvAdCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/activity_bookmarks_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            app:adSize="SMART_BANNER"
            app:adUnitId="ca-app-pub-9123074968180633/1455472307" />
        <!--            app:adUnitId="ca-app-pub-9123074968180633/1455472307" />   my adid  -->

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>