<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context="com.example.constitutionofindia.Activity_Settings_viewerFragment">



        <androidx.cardview.widget.CardView
            android:id="@+id/activity_settings_viewerFragment_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/activity_settings_viewerFragment_tvHeadline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/article"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHighlight="?attr/colorAccent"
                    android:textIsSelectable="true"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/activity_settings_viewerFragment_tvPartName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/activity_settings_viewerFragment_tvPartNum"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/part"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHighlight="?attr/colorAccent"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/activity_settings_viewerFragment_tvPartName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/activity_settings_viewerFragment_tvPartName" />

                <TextView
                    android:id="@+id/activity_settings_viewerFragment_tvPartName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/part_name"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHighlight="?attr/colorAccent"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/activity_settings_viewerFragment_tvChapterName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/activity_settings_viewerFragment_tvPartNum"
                    app:layout_constraintTop_toBottomOf="@+id/activity_settings_viewerFragment_tvHeadline" />

                <TextView
                    android:id="@+id/activity_settings_viewerFragment_tvChapterNum"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/chapter"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHighlight="?attr/colorAccent"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/activity_settings_viewerFragment_tvChapterName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/activity_settings_viewerFragment_tvChapterName" />

                <TextView
                    android:id="@+id/activity_settings_viewerFragment_tvChapterName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/chapter_name"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHighlight="?attr/colorAccent"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/activity_settings_viewerFragment_tvChapterNum"
                    app:layout_constraintTop_toBottomOf="@+id/activity_settings_viewerFragment_tvPartName" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="-15dp"
        android:src="@drawable/arrow_circle_up"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_settings_viewerFragment_card" />


    <TextView
            android:id="@+id/activity_settings_viewerFragment_tvtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="13dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/loremipsum"
            android:textColor="?attr/colorOnBackground"
            android:textColorHighlight="?attr/colorAccent"
            android:textIsSelectable="true"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_settings_viewerFragment_card" />





</androidx.constraintlayout.widget.ConstraintLayout>